--- a/resources/all_pages/aboutpage/index.html
+++ b/resources/all_pages/aboutpage/index.html
@@ -1,12 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about-page</title>
+    <title>home-page</title>
+    <link rel="stylesheet" href="../aboutpage/css/style.css">
 </head>
+
 <body>
-    about-page
+        <header>
+            <table>
+                <tr>
+                    <td>
+                        <div class="dropdown1">
+                            <button class="dropbtn1">GYM WORKOUT</button>
+                            <div class="dropdown-content1">
+                                <a href="../backworkout/index.html">Back workout</a>
+                                <a href="#">Biceps workout</a>
+                                <a href="#">Chest workout</a>
+                                <a href="#">Legs workout</a>
+                                <a href="#">Shoulder workout</a>
+                                <a href="#">Triceps workout</a>
+                            </div>
+                        </div>
+                    </td>
+                    <br>
+                    <td>
+                        <div class="dropdown2">
+                            <button class="dropbtn2">HIIT</button>
+                            <div class="dropdown-content2">
+                                <a href="#">Back workout</a>
+                                <a href="#">Biceps workout</a>
+                                <a href="#">Chest workout</a>
+                                <a href="#">Legs workout</a>
+                                <a href="#">Shoulder workout</a>
+                                <a href="#">Triceps workout</a>
+                            </div>
+                        </div>
+                    </td>
+
+                    <br>
+                    <td>
+                        <div class="dropdown3">
+                            <button class="dropbtn4"><a href="../nutrition/index.html"
+                                    style="text-decoration: none; color: white;">NUTRITION</a></button>
+
+                        </div>
+                    </td>
+                    <br>
+                    <td>
+                        <div class="dropdown4">
+                            <button class="dropbtn4">EQUIPMENTS</button>
+                            <div class="dropdown-content5">
+                                <a href="#">Back workout</a>
+                                <a href="#">Biceps workout</a>
+                                <a href="#">Chest workout</a>
+                                <a href="#">Legs workout</a>
+                                <a href="#">Shoulder workout</a>
+                                <a href="#">Triceps workout</a>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+        </header>
+
+    <p>Transform Your life with </p>
+    <div class="text-container">
+    <h3>Global Fitness</h3>
+</div>
+<center>
+    <p2>IT'S ALL ABOUT HOW YOU CAN ACHIEVE</p2>
+</center>
 </body>
+
 </html>
