--- a/resources/all_pages/homePage/index.html
+++ b/resources/all_pages/homePage/index.html
@@ -5,12 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="C:\GlobalFitness_FinalProject\resources\all_pages\homePage\css\style.css">
+    <link rel="stylesheet" href="../homePage/css/style.css">
 </head>
 <body>
+    <header>Welcome to Global Fitness, <p id="tem"></p></header>
+    <script>
+        document.getElementById("tem").innerHTML=localStorage.getItem("username01");
+        //document.getElementById("tem01").innerHTML=localStorage.getItem("username")
+
+    </script>
    <div class="cover">
-   <center><img src="C:\GlobalFitness_FinalProject\resources\images\CoverImagePage1.jpg" alt=""></center>
-  
+    <center>
+        <h1>OUR STORY</h1>
+    </center>
+    <p>
+        Instead of being just another Fitness gym, our founders wanted to be the best in the industry and set their
+        minds to doing so! Over the last two decades Gym and Fitness has grown into one of Mumbai’s largest online
+        fitness websites, helping thousands of customers live longer, happier and healthier lives.
+    </p>
+    <br>
+    <center>
+        <h1>OUR VALUES</h1>
+    </center>
+    <p>helping customers reach their fitness goals has been at the heart of what we do and why we do it! We live and
+        breathe our six core values and four brand promises— which speak of our commitment to our customers, staff,
+        the
+        industry and our business as a whole.</p>
 </div>
+
+<section>
+    <img src="" style="height: 200px;" alt="">
+</section>
 </body>
 </html>
