--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,22 +8,29 @@
     <title>global-fitness</title>
     <link rel="stylesheet" href="css\style.css">
 </head>
-<body background="resources/images/mylogo.png">
+
+<body class="bgimage" background="resources\images\logofinal.png">
     <center>
+        <header>
+            Welcome to Global Fitness,<p id="tem"></p>
+           
+        </header>
         <div class="head">
-        <p1><a href="C:\GlobalFitness_FinalProject\resources\all_pages\homePage\index.html">HOME</a></p1> 
-        <br>
-        <p1><a href="file:///C:/GlobalFitness_FinalProject/resources/all_pages/aboutpage/index.html">ABOUT</a></p1> 
-        <br>
-        <p1><a href="C:\GlobalFitness_FinalProject\resources\all_pages\coachespage\index.html">COACHES</a></p1> 
-        <br>
-        <p1><a href="C:\GlobalFitness_FinalProject\resources\all_pages\blogspage\index.html">BLOG</a></p1> 
-        <br>
-        <p1><a href="C:\GlobalFitness_FinalProject\resources\all_pages\contactspage\index.html">CONTACTS</a></p1>
-        <br>
-        <p1><button><a href="C:\GlobalFitness_FinalProject\resources\all_pages\loginpage\index.html"><strong>LOGIN</strong></a></button></p1> 
+            <a href="./resources/all_pages/homePage/index.html" style="color: black; text-decoration: none;">ABOUT</a>
+            <a href="./resources/all_pages/aboutpage/index.html" style="color: black; text-decoration: none;">HOME</a>
+            <a href="./resources/all_pages/coachespage/index.html" style="color: black; text-decoration: none;">COACHES</a>
+            <a href="./resources/all_pages/toolspage/index.html" style="color: black; text-decoration: none;">TOOLS</a>
+            <a href="./resources/all_pages/contactspage/index.html" style="color: black; text-decoration: none;">CONTACTS</a>
+            <button><a
+                    href="C:\GlobalFitness_FinalProject\resources\all_pages\loginpage\index.html" style=" text-decoration: none;"><b>LOGIN</b>
+                </a></button>
+        </div>
+        <div class="welcome">WELCOME TO</div>
     </center>
-</div>
-    
+
+    <section class="contacts"></section>
+
+
 </body>
+
 </html>
